infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - minuslevel.com
    - www.minuslevel.com
    secretName: minuslevel-kubernetes-tls
  rules:
  - host: minuslevel.com
    http:
      paths:
      - pathType: Prefix
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: /health
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
#---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#     service.beta.kubernetes.io/do-loadbalancer-hostname: 'minuslevel.com'
#     service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
#     # service.beta.kubernetes.io/do-loadbalancer-enable-backend-keepalive: "true"
#     # kubernetes.digitalocean.com/load-balancer-id: "your-load-balancer-id"
#     # service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "80"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "3"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
#     service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "5"
#   # labels:
#   #   helm.sh/chart: ingress-nginx-2.0.3
#   #   app.kubernetes.io/name: ingress-nginx
#   #   app.kubernetes.io/instance: ingress-nginx
#   #   app.kubernetes.io/version: 0.32.0
#   #   app.kubernetes.io/managed-by: Helm
#   #   app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
#   # namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   # externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 80
#     # - name: https
#     #   port: 443
#     #   protocol: TCP
#     #   targetPort: 443
#   selector:
#     app: ingress-service
#   #   app.kubernetes.io/name: ingress-nginx
#   #   app.kubernetes.io/instance: ingress-nginx
#   #   app.kubernetes.io/component: controller
